--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "project-employee-webpage",
     "version": "0.1.0",
     "private": true,
+    "homepage": "http://jianhong1998.github.io/employee-webpage",
     "dependencies": {
         "@emotion/react": "^11.11.0",
         "@emotion/styled": "^11.11.0",
